fix(`Card`): ensure no wrap and ellipsis on `Card.Header`

--- a/src/card/styles.css
+++ b/src/card/styles.css
@@ -33,6 +33,17 @@
 
     .card-header {
         border-bottom: 1px solid var(--gray-5);
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     .card-footer {
